# DvM

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NAMING_CONVENTIONS.md  RAWEEG_USAGE_GUIDE.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
analysis/: ._BDM.py  ._TFR.py  BDM.py  CTF.py  EEG.py  ERP.py  EYE.py  TFR.py  preprocessing_pipeline.py
beh_analyses/: PreProcessing.py  read_json.py  run_preprocessing.py
beh_analysis/: PreProcessing.py  run_preprocessing.py
eeg_analyses/: ._CTFtemp.py  BDM.py  BDM_temp.py  CTF.py  CTFtemp.py  EEG.py  EEGDistractorSuppression.py  ERP.py  EYE.py  FolderStructure.py  Preproc.py  Spatial_EM-cross.py  Spatial_EM.py  Spatial_EM_UvA.py  TF.py  TFR.py  eeg_support.py  helperFunctions.py  preproc_eeg  preprocessing_pipeline.py  project_plots.py  support.py
open_dvm/: __init__.py
open_dvm/analysis/: BDM.py  CTF.py  EEG.py  ERP.py  EYE.py  TFR.py  __init__.py  preprocessing_pipeline.py
open_dvm/pygazeanalyser/: edfreader.py  eyetribereader.py  gazeplotter.py
open_dvm/stats/: __init__.py  stats_utils.py
open_dvm/support/: FolderStructure.py  __init__.py  eye_readers.py  eye_utils.py  preprocessing_utils.py  synthetic_data.py
open_dvm/visualization/: __init__.py  plot.py  plot_bug.py  plot_utils.py
projects/: AB_R_J_new.py  Babak.py  DT_reps.py  DT_sim.py  DistractorSuppressionBeh.py  EEGDistractorSuppression.py  Twosides.py  WM_suppression.py  WholevsPartial.py  binocular_med.py  color_decoding.py  josipa.py  linguistic_med.py  medidate_auditory.py  online.py  priority_map 2.py  priority_map.py  scistor  single_trial_Pd.py  stat_pred.py  templates_targets_distractors.py  top_down_vs_implicit.py
pygazeanalyser/: eyetribereader.py
signals/: signal_processing.py
stats/: ._nonparametric.py  nonparametric.py  stats_utils.py
support/: ._FolderStructure.py  FolderStructure.py  eye_utils.py  preprocessing_utils.py  support.py
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: __init__.py  bdm_sample_data.py  ctf_sample_data.py  eeg_sample_data.py  eye_readers_sample_data.py  eye_sample_data.py  plot_sample_data.py  (+3 more)
tutorials/: 00_visualization_and_statistics.ipynb  01_preprocessing.ipynb  02_erp_analysis.ipynb  03_erp_analysis_exploratory.ipynb  03_tfr_analysis.ipynb  04_bdm_decoding.ipynb  04_tfr_advanced.ipynb  05_bdm_advanced.ipynb  05_bdm_decoding.ipynb  06_bdm_advanced.ipynb  06_tfr_advanced.ipynb  06_tfr_analysis.ipynb  06_tfr_analysis_old.ipynb  07_ctf_advanced.ipynb  07_ctf_analysis.ipynb  08_ctf_advanced.ipynb  09_bdm_ctf_comparison.ipynb  ERP.ipynb  ERPs.ipynb  decoding_template.ipynb
visualization/: plot.py  plot_bug.py  plot_utils.py
visuals/: ._plot_results.py  ._visuals.py  plot_results.py  taskdisplays.py  visuals.py
(+17 files in other folders)
