[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-dvm"
version = "0.1.0"
description = "Open Decoding Visual Mind: A comprehensive toolkit for analyzing ERP and eye-tracking data in cognitive neuroscience research"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dirk van Moorselaar", email = "dirkvanmoorselaar@gmail.com"},
    {name = "Sebastiaan Mathot", email = "s.mathot@cogsci.nl"}
]
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.1.0",
    "scipy>=1.5.0",
    "scikit-learn>=0.23.0",
    "mne>=0.23.0",
    "matplotlib>=3.0.0",
    "IPython>=7.0.0",
    "seaborn>=0.11.0",
    "statsmodels>=0.12.0",
    "autoreject>=0.3.0",
    "python-picard>=0.7",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "pytest-xdist>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "isort>=5.0",
    "mypy>=0.900",
]

[project.urls]
Homepage = "https://github.com/dvanmoorselaar/open_dvm"
Repository = "https://github.com/dvanmoorselaar/open_dvm"
Issues = "https://github.com/dvanmoorselaar/open_dvm/issues"

[tool.setuptools]
packages = ["open_dvm", "open_dvm.analysis", "open_dvm.support", "open_dvm.stats", "open_dvm.visualization"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --disable-warnings"
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, test multiple components)",
    "slow: Slow running tests (use -m \"not slow\" to skip)",
]

[tool.coverage.run]
source = ["open_dvm"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
